--- a/assets/i18n/id.json
+++ b/assets/i18n/id.json
@@ -28,42 +28,16 @@
   "help": "Bantuan",
   "dark": "Gelap",
   "light": "Terang",
-  "UNBLOCK_IMEI": "Buka IMEI",
-  "BYPASS_A12":"Bypass A12",
-  "REMOVE_ICLOUD":"Hapus iCloud",
-  "MDM_BYPASS":"Bypass MDM",
-  "BYPASS_A11":"Bypass A11",
-  "FMI_OFF_OPEN_MENU":"FMI OFF",
-  "MACBOOK_BYPASS":"Bypass MacBook",
-  "UNLOCK_APPLE_WATCH":"Buka Kunci Apple Watch",
-  "history_transaction": "Histori Transaksi",
-  "system": "Sistem",
-  "Detail_transaksi":"Detail Transaksi",
-  "Create_transaction":"Buat Transaksi",
-  "name_item": "Nama Item",
-  "price": "Harga",
-  "Pembayaran":"Pembayaran",
-  "status": "Status",
-  "no_data_hint": "Data mungkin saja memang tidak ada atau silahkan lakukan pencarian data menggunakan kata pencarian dan periode yang berbeda",
-  "no_data": "Tidak ada data",
-  "refresh":"Muat ulang",
-  "transaksi_done":"Transaksi Telah Berhasil dilakukan,Silahkan cek riwayat transaksimu, dimenu histori transaksi",
-  "Transaction_information":"Informasi Transaksi",
-  "ID_transaction":"ID Transaksi",
-  "Customer":"Kustomer",
-  "Number_phone":"No Handphone",
-  "Product":"Produk",
-  "Price":"Harga",
-  "Time":"Waktu",
-  "Status":"Status",
-  "detail":"Rincian",
-  "Item_type":"Tipe Item",
-  "Item_id":"Id Item",
-  "Item_name":"Nama Item",
-  "Payment_status":"Status Pembayaran",
-  "Created_At":"Dibuat Pada",
-  "Detail_transaction":"Detail Transaksi",
-  "View_payment":"Lihat Pembayaran",
-  "yes": "Iya"
+  "Retry": "Coba lagi",
+  "All": "Semua",
+  "Search_cctv": "Cari CCTV",
+  "Pantau_cctv": "Pantau CCTV",
+  "List_cctv": "Daftar CCTV",
+  "Active": "Aktif",
+  "Inactive": "Tidak Aktif",
+  "search": "Cari",
+  "Account": "Akun",
+  "tap_to_upload_photo": "Ketuk untuk mengunggah foto",
+  "filter_by_location": "Filter berdasarkan lokasi"
 
 }
