--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -28,42 +28,16 @@
   "help": "Help",
   "dark": "Dark",
   "light": "Light",
-  "UNBLOCK_IMEI": "Unblock IMEI",
-  "BYPASS_A12":"Bypass A12",
-  "REMOVE_ICLOUD":" Remove iCloud",
-  "MDM_BYPASS":"Bypass MDM",
-  "BYPASS_A11":"Bypass A11",
-  "FMI_OFF_OPEN_MENU":"FMI OFF",
-  "MACBOOK_BYPASS":"Bypass MacBook",
-  "UNLOCK_APPLE_WATCH":"Unlock Apple Watch",
-  "history_transaction": "History Transaction",
-  "system": "System",
-  "Detail_transaksi":"Detail Transaction",
-  "Create_transaction":"Buat Transaksi",
-  "name_item": "Name Item",
-  "price": "Price",
-  "Pembayaran": "Payment",
-  "status": "Status",
-  "no_data_hint": "The data may not exist or please do a data search using different search words and periods.",
-  "no_data": "No data",
-  "refresh":"Refresh",
-  "transaksi_done":"Transaction Has Been Successfully Made, Please check your transaction history, in the transaction history menu",
-  "Transaction_information":"Transaction Information",
-  "ID_transaction":"ID Transaction",
-  "Customer":"Customer",
-  "Number_phone":"Number Phone",
-  "Product":"Product",
-  "Price":"Price",
-  "Time":"Time",
-  "Status":"Status",
-  "detail":"Detail",
-  "Item_type":"Item Type",
-  "Item_id":"Item Id",
-  "Item_name":"Item name",
-  "Payment_status":"Payment Status",
-  "Created_At":"Created At",
-  "Detail_transaction":"Detail Transaction",
-  "View_payment":"View Payment",
-  "yes": "Yes"
-
+  "Retry": "Retry",
+  "All": "All",
+  "Search_cctv": "Search CCTV",
+  "Pantau_cctv": "Monitor CCTV",
+  "List_cctv": "List CCTV",
+  "search": "Search",
+  "Account": "Account",
+  "tap_to_upload_photo": "Tap to upload photo",
+  "Active": "Active",
+  "Inactive": "Inactive",
+  "filter_by_location": "Filter by location"
+  
 }
