--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -8,16 +8,17 @@
   "dont_have_account": "Don't have an account?",
   "create_here": "Create here",
   "sign_up": "Sign up",
-  "full_name": "Full Name",
+  "full_name": "Full name",
+  "name":"Name",
   "address": "Address",
-  "phone_number": "Phone Number",
+  "phone_number": "Phone number",
   "change_language": "Change language",
-  "change_password": "Change Password",
+  "change_password": "Change password",
   "theme_mode": "Theme mode",
   "sign_out": "Sign out",
   "home": "Home",
   "account": "Account",
-  "about_account": "About Account",
+  "about_account": "About account",
   "are_you_sure_want_to_sign_out": "Are you sure want to sign out?",
   "no": "No",
   "settings": "Setting",
@@ -28,26 +29,31 @@
   "light": "Light",
   "Retry": "Retry",
   "All": "All",
-  "Search_cctv": "Search CCTV",
-  "Pantau_cctv": "Monitor CCTV",
-  "List_cctv": "List CCTV",
+  "Search_cctv": "Search cctv",
+  "Pantau_cctv": "Monitor cctv",
+  "List_cctv": "List cctv",
   "search": "Search",
   "Account": "Account",
   "tap_to_upload_photo": "Tap to upload photo",
   "Active": "Active",
   "Inactive": "Inactive",
-  "no_cctv_found": "No CCTV found",
+  "no_cctv_found": "No cctv found",
   "change_wallpaper": "Change wallpaper",
   "default_wallpaper": "Default wallpaper",
   "custom_wallpaper": "Custom wallpaper",
   "pick_from_gallery": "Pick from gallery",
   "system": "System",
+  "name_is_required":"Name is required",
+  "username_is_required":"Username is required",
+  "email_is_required": "Email is required",
+  "password_is_required": "Password is required",
   "register_success": "Register success",
+  "login_failed":"Login failed, please check your email or password",
   "terjadi_kesalahan_ketika_mendaftar": "An error occurred when registering",
   "register_failed": "Register failed",
   "no_have_account?register_here": "No have account? register here",
   "current_custom_wallpaper_preview": "Current custom wallpaper preview",
   "login_failed.Please_try_again": "Login failed. Please try again",
-  "login_failed.please_check_your_username_and_password": "Login failed. please check your username and password",
+  "login_failed.please_check_your_username_and_password": "Login failed. Please check your username and password",
   "filter_by_location": "Filter by location"
 }
