--- a/assets/i18n/id.json
+++ b/assets/i18n/id.json
@@ -1,53 +1,59 @@
 {
   "locale": "id",
   "got_it": "Mengerti",
-  "username": "Nama Pengguna",
-  "password": "Kata Sandi",
+  "username": "Nama pengguna",
+  "password": "Kata sandi",
   "sign_in": "Masuk",
-  "sign_in_with_your_account": "Masuk dengan akun Anda",
+  "sign_in_with_your_account": "Masuk dengan akun anda",
   "dont_have_account": "Belum punya akun?",
   "create_here": "Buat disini",
-  "full_name": "Nama Lengkap",
+  "full_name": "Nama lengkap",
   "address": "Alamat",
-  "phone_number": "Nomor Telepon",
-  "sign_up": "Daftar",
+  "name": "Nama",
+  "phone_number": "Nomor telepon",
+  "sign_up": "Daftar akun",
   "change_language": "Ubah bahasa",
-  "change_password": "Ubah Password",
+  "change_password": "Ubah password",
   "theme_mode": "Mode tema",
   "sign_out": "Keluar",
   "home": "Beranda",
   "account": "Akun",
-  "about_account": "Tentang Akun",
-  "are_you_sure_want_to_sign_out": "Apakah Anda yakin ingin keluar?",
+  "about_account": "Tentang akun",
+  "are_you_sure_want_to_sign_out": "Apakah anda yakin ingin keluar?",
   "setting": "Pengaturan",
   "no": "Tidak",
   "version": "Versi",
-  "wellcome": "Selamat Datang",
+  "wellcome": "Selamat datang",
   "help": "Bantuan",
   "dark": "Gelap",
   "light": "Terang",
   "Retry": "Coba lagi",
   "All": "Semua",
-  "Search_cctv": "Cari CCTV",
-  "Pantau_cctv": "Pantau CCTV",
-  "List_cctv": "Daftar CCTV",
+  "Search_cctv": "Cari cctv",
+  "Pantau_cctv": "Pantau cctv",
+  "List_cctv": "Daftar cctv",
   "Active": "Aktif",
-  "Inactive": "Tidak Aktif",
+  "Inactive": "Tidak aktif",
   "search": "Cari",
   "Account": "Akun",
   "change_wallpaper": "Ubah wallpaper",
   "default_wallpaper": "Wallpaper default",
   "custom_wallpaper": "Wallpaper kustom",
   "pick_from_gallery": "Pilih dari galeri",
-  "current_custom_wallpaper_preview": "Prabaca wallpaper kustom saat ini",
+  "name_is_required":"Nama diperlukan",
+  "username_is_required":"Username diperlukan",
+  "email_is_required": "Email diperlukan",
+  "password_is_required": "Password diperlukan",
+  "current_custom_wallpaper_preview": "Wallpaper kustom saat ini",
   "system": "Sistem",
+  "login_failed":"Masuk gagal silahkan periksa email atau password anda",
   "register_success": "Pendaftaran berhasil",
   "register_failed": "Pendaftaran gagal",
   "terjadi_kesalahan_ketika_mendaftar": "Terjadi kesalahan ketika mendaftar",
-  "no_cctv_found": "Tidak ada CCTV ditemukan",
+  "no_cctv_found": "Tidak ada cctv yang ditemukan",
   "tap_to_upload_photo": "Ketuk untuk mengunggah foto",
   "no_have_account?register_here": "Tidak punya akun? daftar disini",
   "login_failed.Please_try_again": "Masuk gagal. Silakan coba lagi",
-  "login_failed.please_check_your_username_and_password": "Masuk gagal. silakan periksa nama pengguna dan kata sandi Anda",
+  "login_failed.please_check_your_username_and_password": "Masuk gagal. Silahkan periksa nama pengguna dan kata sandi Anda",
   "filter_by_location": "Filter berdasarkan lokasi"
 }
