--- a/assets/i18n/id.json
+++ b/assets/i18n/id.json
@@ -36,6 +36,8 @@
   "Inactive": "Tidak aktif",
   "search": "Cari",
   "Account": "Akun",
+  "email":"Email",
+  "Signup":"Daftar",
   "change_wallpaper": "Ubah wallpaper",
   "default_wallpaper": "Wallpaper default",
   "custom_wallpaper": "Wallpaper kustom",
