--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -13,14 +13,34 @@
   "full_name": "Full name",
   "name":"Name",
   "address": "Address",
+  "app_version": "App version",
+  "app_settings": "App settings",
+  "account_setting": "Account settings",
+  "theme": "Theme",
+  "language": "Language",
   "phone_number": "Phone number",
   "change_language": "Change language",
   "change_password": "Change password",
+  "your_account": "Your account",
+  "kamu_sedang_menggunakan_akun-gratis.upgrade_ke_versi_member_untuk_dapatkan_data_cctv_secara_menyeluruh": "You are using a free account. Upgrade to the member version to get complete CCTV data",
   "theme_mode": "Theme mode",
   "sign_out": "Sign out",
-  "home": "Home",
+  "home": "Home", 
+  "close": "Close",
+  "yes": "Yes",
+  "free": "Free",
+  "your_uniq_code": "Your unique code",
+  "upgrade_fee:Rp.15.000": "Upgrade fee: Rp.15.000",
+  "after_payment_please_confirm_to_admin_for_activation": "After payment, please confirm to admin for activation",
+  "copy_this_unique_code_to_share_with_admin_for_process_register": "Copy this unique code to share with admin for process register",
+  "upgrade_to_member": "Upgrade to member",
+  "account_status": "Account status : ",
+  "paid":"Member",
   "account": "Account",
+  "loading": "Loading",
   "about_account": "About account",
+  "upgrade_to_pro": "Upgrade to be member",
+  "kamu_adalah_member_selamat_menikmati_akses_cctv_secara_menyeluruh": "You are a member, enjoy complete access to CCTV",
   "are_you_sure_want_to_sign_out": "Are you sure want to sign out?",
   "no": "No",
   "settings": "Setting",
