--- a/assets/i18n/id.json
+++ b/assets/i18n/id.json
@@ -18,6 +18,26 @@
   "sign_out": "Keluar",
   "home": "Beranda",
   "account": "Akun",
+  "loading": "Memuat",
+  "app_version": "Versi aplikasi",
+  "app_settings": "Pengaturan aplikasi",
+  "account_setting": "Pengaturan akun",
+  "theme": "Tema",
+  "language": "Bahasa",
+  "your_account": "Akun anda",
+  "kamu_sedang_menggunakan_akun-gratis.upgrade_ke_versi_member_untuk_dapatkan_data_cctv_secara_menyeluruh":"Anda sedang menggunakan akun gratis. Upgrade ke versi member untuk mendapatkan data CCTV secara menyeluruh",
+  "yes": "Ya",
+  "close": "Tutup",
+  "upgrade_to_member": "Upgrade ke member",
+  "after_payment_please_confirm_to_admin_for_activation": "Setelah pembayaran, silakan konfirmasi ke admin untuk aktivasi",
+  "copy_this_unique_code_to_share_with_admin_for_process_register": "Salin kode unik ini untuk dibagikan kepada admin untuk proses pendaftaran",
+  "upgrade_fee:Rp.15.000": "Biaya upgrade: Rp.15.000",
+  "your_uniq_code": "Kode unik anda",
+  "account_status": "Status akun : ",
+  "free": "Gratis",
+  "paid":"Member",
+  "upgrade_to_pro": "Upgrade menjadi member",
+  "kamu_adalah_member_selamat_menikmati_akses_cctv_secara_menyeluruh":"Anda adalah member, selamat menikmati akses CCTV secara menyeluruh",
   "about_account": "Tentang akun",
   "are_you_sure_want_to_sign_out": "Apakah anda yakin ingin keluar?",
   "setting": "Pengaturan",
