--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -25,6 +25,8 @@
   "kamu_sedang_menggunakan_akun-gratis.upgrade_ke_versi_member_untuk_dapatkan_data_cctv_secara_menyeluruh": "You are using a free account. Upgrade to the member version to get complete CCTV data",
   "theme_mode": "Theme mode",
   "sign_out": "Sign out",
+  "wallpaper_setting":"Wallpaper setting",
+  "choose_from_gallery": "Choose from gallery",
   "home": "Home", 
   "close": "Close",
   "yes": "Yes",
@@ -71,7 +73,7 @@
   "email_is_required": "Email is required",
   "password_is_required": "Password is required",
   "register_success": "Register success",
-  "login_failed":"Login failed, please check your email or password",
+  "login_failed":"Login failed, please check your email or password. or if you login in another device, please logout first",
   "terjadi_kesalahan_ketika_mendaftar": "An error occurred when registering",
   "register_failed": "Register failed",
   "no_have_account?register_here": "No have account? register here",
