--- a/assets/i18n/id.json
+++ b/assets/i18n/id.json
@@ -27,6 +27,8 @@
   "your_account": "Akun anda",
   "kamu_sedang_menggunakan_akun-gratis.upgrade_ke_versi_member_untuk_dapatkan_data_cctv_secara_menyeluruh":"Anda sedang menggunakan akun gratis. Upgrade ke versi member untuk mendapatkan data CCTV secara menyeluruh",
   "yes": "Ya",
+  "wallpaper_setting": "Pengaturan wallpaper",
+  "choose_from_gallery": "Pilih dari galeri",
   "close": "Tutup",
   "upgrade_to_member": "Upgrade ke member",
   "after_payment_please_confirm_to_admin_for_activation": "Setelah pembayaran, silakan konfirmasi ke admin untuk aktivasi",
@@ -68,7 +70,7 @@
   "password_is_required": "Password diperlukan",
   "current_custom_wallpaper_preview": "Wallpaper kustom saat ini",
   "system": "Sistem",
-  "login_failed":"Masuk gagal silahkan periksa email atau password anda",
+  "login_failed":"Masuk gagal silahkan periksa email atau password anda, atau jika anda sedang login diperangkat lain silahkan logout terlebih dahulu",
   "register_success": "Pendaftaran berhasil",
   "register_failed": "Pendaftaran gagal",
   "terjadi_kesalahan_ketika_mendaftar": "Terjadi kesalahan ketika mendaftar",
